# englishlearning

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  ollama.Dockerfile
.github/workflows/: ci.yml
data/: config.json.example
include/config/: JsonConfig.h
include/core/: ChatController.h  PromptBuilder.h
include/interfaces/: IConfig.h  IConversationStore.h  ILLMService.h  IMessenger.h  IScheduler.h
include/llm/: OllamaService.h
include/models/: Message.h
include/scheduler/: DailyScheduler.h
include/storage/: SQLiteConversationStore.h
include/telegram/: TelegramBot.h
src/: main.cpp
src/config/: JsonConfig.cpp
src/core/: ChatController.cpp  PromptBuilder.cpp
src/llm/: OllamaService.cpp
src/scheduler/: DailyScheduler.cpp
src/storage/: SQLiteConversationStore.cpp
src/telegram/: TelegramBot.cpp
